feat: /auth/v1/activateを実装
